kubernetes/apps/default/echo-server/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echo-server
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`echo-server.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: echo-server
          port: 8080
      middlewares:
        - name: traefik-middleware-chains-default
          namespace: networking
  tls:
    secretName: "echo-server-${SECRET_DOMAIN/./-}-tls"
