kubernetes/apps/default/echo-server/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  namespace: default
  annotations:
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: echo-server.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/icon: ic:baseline-list-alt
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "echo-server.${SECRET_DOMAIN}"
      secretName: "echo-server-tls"
  rules:
    - host: "echo-server.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  number: 80
# ---
# apiVersion: externaldns.k8s.io/v1alpha1
# kind: DNSEndpoint
# metadata:
#   name: "echo-server.${SECRET_DOMAIN}"
#   namespace: default
# spec:
#   endpoints:
#     - dnsName: "echo-server.${SECRET_DOMAIN}"
#       recordTTL: 180
#       recordType: CNAME
#       targets:
#         - "echo-server.${SECRET_DOMAIN}"
#         - "${SECRET_DOMAIN}"
